--- a/src/main/java/com/byteme/fxml/Map.fxml
+++ b/src/main/java/com/byteme/fxml/Map.fxml
@@ -9,7 +9,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.MapController">
    <children>
-      <GridPane gridLinesVisible="true" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-border-color: Black;">
+      <GridPane fx:id="map" gridLinesVisible="true" layoutX="18.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-border-color: Black;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -28,233 +28,6 @@
           <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <children>
-            <ImageView fx:id="sq1" fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="2">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="4">
-               <image>
-                  <Image url="@../images/River.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="5">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="6">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="7">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="8">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="7" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="8" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="4" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/River.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="5" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="2" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="5" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="8" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="6" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="6" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="4" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/River.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="5" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="7" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="6" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="5" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="7" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#goToTown" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="4" GridPane.rowIndex="2">
-               <image>
-                  <Image url="@../images/Town.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="7" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="8" GridPane.rowIndex="1">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="3" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="2" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="4" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/River.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="6" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Plain.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="100.0" fitWidth="100.0" onMouseClicked="#tileChosen" pickOnBounds="true" preserveRatio="true" styleClass="css/MapTiles.css" GridPane.columnIndex="8" GridPane.rowIndex="4">
-               <image>
-                  <Image url="@../images/Mountain.png" />
-               </image>
-            </ImageView>
-         </children>
       </GridPane>
       <Button layoutX="683.0" layoutY="615.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="220.0" text="Pass">
          <font>
