--- a/src/main/resources/fxml/Pub.fxml
+++ b/src/main/resources/fxml/Pub.fxml
@@ -8,17 +8,27 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
     <children>
-        <Label fx:id="pubmoneyLabel" layoutX="50.0" layoutY="50.0" prefHeight="100.0" prefWidth="100.0" text="HI" textFill="WHITE">
+        <Label layoutX="70.0" layoutY="30.0" prefHeight="100.0" prefWidth="246.0" text="HI" textFill="WHITE">
             <font>
                 <Font size="30.0" />
             </font>
         </Label>
         <ImageView fitHeight="400.0" fitWidth="400.0" layoutX="300.0" layoutY="250.0" pickOnBounds="true" preserveRatio="true">
                 <image>
-                    <Image url="@../images/moneybag.png"/>
+                    <Image url="@../images/moneybag.png" />
                 </image>
         </ImageView>
+        <Button layoutX="800.0" layoutY="603.0" mnemonicParsing="false" onAction="#goToMap" text="OK">
+            <font>
+                <Font size="24.0" />
+            </font>
+        </Button>
+    <Label layoutX="647.0" layoutY="30.0" prefHeight="100.0" prefWidth="246.0" text="HI" textFill="WHITE">
+        <font>
+            <Font size="30.0" />
+        </font>
+    </Label>
     </children>
 </Pane>
