--- a/src/main/resources/fxml/Pub.fxml
+++ b/src/main/resources/fxml/Pub.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.TownController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="935.0" style="-fx-background-color: #000099;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.byteme.Controllers.PubController">
     <children>
         <Label layoutX="70.0" layoutY="30.0" prefHeight="100.0" prefWidth="246.0" text="HI" textFill="WHITE">
             <font>
@@ -20,7 +20,7 @@
                     <Image url="@../images/moneybag.png" />
                 </image>
         </ImageView>
-        <Button layoutX="800.0" layoutY="603.0" mnemonicParsing="false" onAction="#goToMap" text="OK">
+        <Button layoutX="800.0" layoutY="603.0" mnemonicParsing="false" onAction="#goToMapFromPub" text="OK">
             <font>
                 <Font size="24.0" />
             </font>
